# JNITest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 123.m4a
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/jnitest/: MainActivity.java
app/src/main/java/com/example/utils/: JNIListener.java  JniUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
